<resources>
    <string name="app_name">MailApp</string>
    <string name="action_mail">Mail</string>
    <string name="action_setting">Setting</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="nickname_validation_error_msg">닉네임은 영문과 숫자를 결합한 4~12자로 입력해주세요</string>
    <string name="nickname_hint">닉네임</string>
    <string name="email_validation_error_msg">이메일 형식에 맞게 입력해주세요</string>
    <string name="email_hint">이메일</string>

    <string name="mail_title">Wmail</string>

    <string name="action_primary">Primary</string>
    <string name="action_social">Social</string>
    <string name="action_promotions">Promotions</string>
</resources>